--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
- nginx:
-    image: webpage:v1
+  nginx:
+    image: ${DOCKER_REGISTRY}
     container_name: static-website
     ports:
       - "80:80"
