--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nginx:
-    image: ${DOCKER_REGISTRY}
+    image: webpage:v1
     container_name: static-website
     ports:
       - "80:80"
